enhancing validation of worker's location
